packages/transpiler/test/fixtures/errors/global-statement/input.ts
console.log('hello');

/**
 * @public
 */
export class WithGlobal {
    public greet(): string {
        return 'hi';
    }
}
